--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">    
-    <title>Task 1</title>
+    <title>HamburgerMenu</title>
 </head>
 <body>
     <section class="fixed">
